using redis for async task and send mail in go
